2010-05-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* update_addresses: fixed #1455 Function update_addresses() (host
	OS linux24 and derivatives) uses both ip and ifconfig. Should stick
	with /sbin/ip so the script works on systems where ifconfig is
	not installed.

2010-05-13  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWObjectDropArea.cpp (FWObjectDropArea::editObject): fixed #1452
	double click on a rule set in the branch action dialog should open
	it in rule set view

	* iptables.g (MATCH_RECENT_SET): see #1451 "policy importer should
	support some popular iptables modules". Added support for module
	"recent" and rules that match standard ip/icmp/udp/tcp protocols
	and at the same time module "mark", "length", "limit" or "recent".
	Rules like these are translated into a combination of a branching
	rule and additional rule in a branch rule set that implements
	module match.

	* iptables.g (multiport_tcp_udp_port_spec): fixes #1453 "iptables
	importer should parse multiport module parameter --ports". Module
	multuport with parameter "--ports" matches either source or
	destination port numbers. Importer creates two tcp (or udp)
	service objects to implement this match.

	* IPTImporter.cpp (IPTImporter::addSrv): See #1450, SourceForge
	ticket 3000809: iptables parser can now import "mark" module
	matches with hexadecimal parameters and "length" module
	matches. Also added check in the importer for broken iptables-save
	files where rules for any table are not terminated with "COMMIT".

2010-05-12  vadim  <vadim@vk.crocodile.org>

	* configlets/procurve/installer_commands_pre_config: commands
	for the installer for ProCurve

	* instDialog.cpp (instDialog::isCiscoFamily): Using the same
	built-in installer for Cisco and for ProCurve.

	* procurveaclAdvancedDialog.cpp (procurveaclAdvancedDialog::procurveaclAdvancedDialog):
	fixed #1449 options for ACL remarks and comments for ProCurve
