@@ -36,7 +36,9 @@ public:
     procurveInterfaces() : interfaceProperties() {}
     // simple name validation: does not allow space and "-"
     // However some platform permit space (procurve).
-    virtual bool basicValidateInterfaceName(const QString &name, QString &err);
+    virtual bool basicValidateInterfaceName(libfwbuilder::Interface *intf,
+                                            const QString &proposed_name,
+                                            QString &err);
     
     virtual bool parseVlan(const QString&, QString*, int*);
 
