@@ -1,3 +1,11 @@
+2010-05-15  Vadim Kurland  <vadim@vk.crocodile.org>
+
+	* linux24Interfaces.cpp (linux24Interfaces::basicValidateInterfaceName):
+	fixed #1458 Should permit interface name "br-lan" for bridge interface
+	on Linux. Bridge interfaces on Linux can have any name, including those
+	with "-". OpenWRT creates bridge interface with the name "br-lan" by
+	default.
+
 2010-05-14  Vadim Kurland  <vadim@vk.crocodile.org>
 
 	* update_addresses: fixed #1455 Function update_addresses() (host
